<resources>
    <string name="app_name">Lista Organizacao Pessoal</string>
    <string name="btnCadastrarTarefa">Cadastrar tarefa</string>
    <string name="btnCadastrarTag">Cadastrar tag</string>
    <string name="btnVisualizarTags">Tags</string>
    <string name="hintTitulo">Título</string>
    <string name="titulo">Título:</string>
    <string name="dificuldade">Dificuldade:</string>
    <string name="descricao">Descriçao:</string>
    <string name="estado">Estado:</string>
    <string name="hintDescricao">Descrição</string>
    <string name="labelGrauDificuldade">Grau de dificuldade:</string>
    <string name="labelEstado">Estado:</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="activity_cadastrar_tarefa">Cadastrar tarefa</string>
    <string name="activity_cadastrar_tag">Cadastrar tag</string>
    <string name="activity_visualizar_tags">Tags</string>
    <string name="hintNomeTag">Nome</string>
    <string name="labelTarefas">Tarefas:</string>
    <string name="labelMinhasTags">Minhas tags:</string>
</resources>
