<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diego.listaorganizacaopessoal.CadastroTarefa"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/txtDescricaoTarefa"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/hintDescricao"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtTituloTarefa"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloTarefa"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtTituloTarefa" />

    <EditText
        android:id="@+id/txtTituloTarefa"
        android:layout_width="345dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hintTitulo"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp" />

    <Spinner
        android:id="@+id/spinnerGrauDificuldadeTarefa"
        android:layout_width="0dp"
        android:layout_height="19dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtDescricaoTarefa"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoTarefa"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtDescricaoTarefa" />

    <Spinner
        android:id="@+id/spinnerEstadoTarefa"
        android:layout_width="0dp"
        android:layout_height="19dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spinnerGrauDificuldadeTarefa"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGrauDificuldadeTarefa"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerGrauDificuldadeTarefa" />

    <TextView
        android:id="@+id/labelEstadoTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelEstado"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spinnerEstadoTarefa"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerEstadoTarefa" />

    <TextView
        android:id="@+id/labelGrauDificuldadeTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelGrauDificuldade"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spinnerGrauDificuldadeTarefa"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerGrauDificuldadeTarefa" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

</android.support.constraint.ConstraintLayout>
