<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diego.listaorganizacaopessoal.layout_tarefa">

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/dificuldade"
        android:layout_marginStart="7dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toRightOf="@+id/titulo"
        android:layout_marginLeft="7dp" />

    <TextView
        android:id="@+id/text_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/dificuldade"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/dificuldade"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/dificuldade" />

    <TextView
        android:id="@+id/text_grau_dificuldade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/estado"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/estado"
        app:layout_constraintLeft_toRightOf="@+id/dificuldade"
        android:layout_marginLeft="7dp" />

    <TextView
        android:id="@+id/text_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginTop="40dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/estado"
        android:layout_marginLeft="7dp" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_titulo"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_descricao"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/dificuldade" />

    <TextView
        android:id="@+id/dificuldade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificuldade"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_grau_dificuldade"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/titulo" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:layout_marginStart="34dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_estado"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/text_grau_dificuldade"
        android:layout_marginLeft="34dp" />

</android.support.constraint.ConstraintLayout>